Tue Jul 04 01:44:21 2000  George Lebl <jirka@5z.com>

	* gnome-color-picker.c:  Excorcise imlib reference from a label :)

	* gnome-scores.[ch]:  Add and use a private pointer.  Allow setting
	  logo multiple times.  Add a _construct method.  Add a
	  _display_with_pixmap function to use a pixmap logo rather then just
	  a title.

2000-07-03  Jonathan Blandford  <jrb@redhat.com>

	* gnome-druid-page-standard.c: add finalize function.  Move
	free()ing to it. 

Tue Jun 27 00:04:35 2000  George Lebl <jirka@5z.com>

	* gnome-druid*.[ch]: Added private pointers to everything and moved
	  the privates into it

	* gnome-druid-page*.c: Mark the fonts translatable and add -*-*
	  instead of iso8859-1 encoding

	* gnome-font-picker.c: Mark the default font translatable and add
	  -*-* instead of iso8859-1 encoding and also mark the default text
	  for translation

Mon Jun 26 13:31:01 2000  George Lebl <jirka@5z.com>

	* gnome-animator.[ch]:  Remove dependence on knowing internals of
	  GdkPixbufFrame and merge the fields into our own frame structure.
	  Also fix the gdk-pixbuf-animation -> gnome-animator loading.
	  However the GdkPixbufFrameAction still remains to be implemented

Sun Jun 25 23:50:22 2000  George Lebl <jirka@5z.com>

	* gnome-about.[ch]: Add a private structure.  This widget still needs
	  to be cleaned up

	* gnome-app.c: dup the app id string in the GtkArg get

	* gnome-color-picker.[ch]: Use a private structure for privates. 
	  Dup the title string on GtkArg get

	* gnome-dialog.[ch]: Use a private structure for privates.

	* gnome-pixmap-entry.c, gnome-file-entry.c, gnome-pixmap.c:
	  use GTK_TYPE_STRING for string arguments

	* gnome-href.[ch]: dup string on argument get

	* gnome-icon-entry.c: make history_id and browse_dialog_title
	  readable arguments and use GTK_TYPE_STRING

	* gnome-messagebox.[ch]: use a private structure for privates

Sun Jun 25 18:15:36 2000  George Lebl <jirka@5z.com>
